touch style.scss banner.jpg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
-.header__name {
-	font-size: 5rem;
+.header__title {
+  color: "Archivo Black", sans-serif;
 }
+/*# sourceMappingURL=style.css.map */
