--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 .html {
+  font-family: Roboto;
   font-size: 16px;
 }
 
@@ -23,9 +24,20 @@
     text-transform: uppercase;
   }
   /*--Menu--*/
-  .nav {
+  .menu {
     position: absolute;
+    width: 100%;
     bottom: 0;
+    margin-bottom: 0.6rem;
+  }
+  .menu::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    color: #CFCFCF;
+  }
+  .nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -37,9 +49,31 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .nav-item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+  }
   .nav-link {
     color: #fff;
     padding: 0;
+  }
+  /*--Main section--*/
+  .section__main {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  /*--Footer--*/
+  .footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+  }
+  .copyright {
+    text-align: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
