--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,77 +3,84 @@
   font-size: 16px;
 }
 
-@media (max-width: 767px) {
-  /*--banner--*/
-  .banner {
-    position: relative;
-    background: url(../images/banner.jpg) center/cover no-repeat;
-    min-height: 200px;
-  }
-  /*--Header--*/
-  .header__title {
-    font-family: "Archivo Black", sans-serif;
-    font-size: 2rem;
-    color: #fff;
-    padding-top: 1rem;
-  }
-  .header__subtitle {
-    font-family: "Archivo Black", sans-serif;
-    font-size: 1.1rem;
-    color: #D66424;
-    text-transform: uppercase;
-  }
+/*--Header--*/
+.header {
+  height: 20vh;
+  min-width: 200px;
+}
+
+.header--background {
+  background: url(../images/banner.jpg) center/cover no-repeat;
+  min-height: 200px;
+}
+
+.header__title {
+  font-family: "Archivo Black", sans-serif;
+  font-size: 2rem;
+  color: #fff;
+  padding: 1rem 0 .5rem;
+}
+
+.header__subtitle {
+  font-family: "Archivo Black", sans-serif;
+  font-size: 1.1rem;
+  padding: .5rem 0 1rem;
+  color: #D66424;
+  text-transform: uppercase;
+}
+
+/*--Menu--*/
+.menu {
+  width: 100%;
+}
+
+.menu::before {
+  content: "";
+  display: block;
+  border: 1px solid #CFCFCF;
+  z-index: 1;
+}
+
+.nav-item:nth-child(2n) {
+  margin-top: 2rem;
+}
+
+.nav-link {
+  color: #fff;
+  padding: .5rem 0;
+}
+
+/*--Main section--*/
+.section {
+  padding: 15px 0;
+}
+
+.section__main {
+  text-align: center;
+}
+
+/*--Footer--*/
+.footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.copyright {
+  text-align: center;
+}
+
+.copyright::before {
+  content: "";
+  display: block;
+  border: 1px solid #CFCFCF;
+  z-index: 1;
+}
+
+@media (min-width: 576px) {
   /*--Menu--*/
-  .menu {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    margin-bottom: 0.6rem;
-  }
-  .menu::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 2px;
-    color: #CFCFCF;
-  }
-  .nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .nav-item {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-  }
-  .nav-link {
-    color: #fff;
-    padding: 0;
-  }
-  /*--Main section--*/
-  .section__main {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  /*--Footer--*/
-  .footer {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-  }
-  .copyright {
-    text-align: center;
+  .nav-item:nth-child(2n) {
+    margin-top: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
