--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,83 +6,95 @@ $main_font: Roboto;
     font-size: 16px;
 }
 
-@media (max-width:767px) {
-    /*--banner--*/
-    .banner {
-        position: relative;
-        background: url(../images/banner.jpg) center/cover no-repeat;
-        min-height: 200px;
-    }
+/*--Header--*/
+.header {
+    height: 20vh;
+    min-width: 200px;
+}
 
-    /*--Header--*/
+.header--background {
+    background: url(../images/banner.jpg) center/cover no-repeat;
+    min-height: 200px;
+}
 
-    .header__title {
-        font-family: $header_font;
-        font-size: 2rem;
-        color: #fff;
-        padding-top: 1rem;
-    }
+.header__title {
+    font-family: $header_font;
+    font-size: 2rem;
+    color: #fff;
+    padding: 1rem 0 .5rem;
+}
 
-    .header__subtitle {
-        font-family: $header_font;
-        font-size: 1.1rem;
-        color: #D66424;
-        text-transform: uppercase;
-    }
+.header__subtitle {
+    font-family: $header_font;
+    font-size: 1.1rem;
+    padding: .5rem 0 1rem;
+    color: #D66424;
+    text-transform: uppercase;
+}
 
+
+/*--Menu--*/
+
+.menu {
+    width: 100%;
+}
+
+.menu::before {
+    content: "";
+    display: block;
+    border: 1px solid #CFCFCF;
+    z-index: 1;
+}
+
+.nav {
+    
+}
+
+.nav-item:nth-child(2n) {
+    margin-top: 2rem;
+}
+
+.nav-link {
+    color: #fff;
+    padding: .5rem 0;
+}
+
+
+/*--Main section--*/
+
+.section {
+    padding: 15px 0;
+}
+
+.section__main {
+    text-align: center;
+}
+
+
+/*--Footer--*/
+
+.footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+.copyright {
+    text-align: center;
+}
+
+.copyright::before {
+    content: "";
+    display: block;
+    border: 1px solid #CFCFCF;
+    z-index: 1;
+}
+
+@media (min-width:576px) {
 
     /*--Menu--*/
 
-    .menu {
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-        margin-bottom: 0.6rem;
-    }
-
-    .menu::before {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 2px;
-        color: #CFCFCF;
-    }
-    .nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .nav-item {
-        flex: 1 1 auto;
-    }
-
-    .nav-link {
-        color: #fff;
-        padding: 0;
-    }
-
-    /*--Main section--*/
-
-    .section {
-    }
-
-    .section__main {
-        position: absolute;
-        text-align: center;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    /*--Footer--*/
-    
-    .footer {
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-    }
-
-    .copyright {
-        text-align: center;
+    .nav-item:nth-child(2n) {
+        margin-top: 0;
     }
 }
