--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@
   font-size: 16px;
 }
 
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
 /*--Header--*/
 .header {
   height: 20vh;
@@ -30,10 +35,6 @@
 }
 
 /*--Menu--*/
-.menu {
-  width: 100%;
-}
-
 .menu::before {
   content: "";
   display: block;
@@ -50,6 +51,10 @@
   padding: .5rem 0;
 }
 
+.nav-link:hover {
+  color: #D66424;
+}
+
 /*--Main section--*/
 .section {
   padding: 15px 0;
@@ -57,6 +62,7 @@
 
 .section__main {
   text-align: center;
+  padding-bottom: 2.5rem;
 }
 
 /*--Footer--*/
