--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,11 @@ $main_font: Roboto;
     font-size: 16px;
 }
 
+.page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
 /*--Header--*/
 .header {
     height: 20vh;
@@ -35,19 +40,11 @@ $main_font: Roboto;
 
 /*--Menu--*/
 
-.menu {
-    width: 100%;
-}
-
 .menu::before {
     content: "";
     display: block;
     border: 1px solid #CFCFCF;
     z-index: 1;
-}
-
-.nav {
-    
 }
 
 .nav-item:nth-child(2n) {
@@ -59,6 +56,10 @@ $main_font: Roboto;
     padding: .5rem 0;
 }
 
+.nav-link:hover {
+    color: #D66424;
+}
+
 
 /*--Main section--*/
 
@@ -68,6 +69,7 @@ $main_font: Roboto;
 
 .section__main {
     text-align: center;
+    padding-bottom: 2.5rem;
 }
 
 
