--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,23 @@
   padding-bottom: 2.5rem;
 }
 
+.photo {
+  max-height: 200px;
+  margin-top: 2rem;
+}
+
+.social {
+  margin-right: -1rem;
+}
+
+.social a {
+  color: #212529;
+}
+
+.social a i {
+  margin-right: 1rem;
+}
+
 /*--Footer--*/
 .footer {
   position: absolute;
